--- a/views/cms-dashboard.user.ejs
+++ b/views/cms-dashboard.user.ejs
@@ -127,8 +127,13 @@
 
 
 												<div class="col_full">
-													<label class="font-body capitalize" for="register-form-modal-password">Password:</label>
-													<input type="password" id="register-form-modal-password" name="password" value="" class="form-control" />
+													<label class="font-body capitalize" for="password">Password:</label>
+													<input type="password" id="password" name="password" value="" class="form-control"  required/>
+												</div>
+
+												<div class="col_full">
+													<label class="font-body capitalize" for="password">Confirm Password:</label>
+													<input type="password" id="confirm_password" name="confirmpassword" value="" class="form-control" required/>
 												</div>
 
 												<div class="col_full nobottommargin">
@@ -253,9 +258,29 @@
 
 	<script>
 	$(document).ready(function() {
+		var password = document.getElementById("password")
+		  , confirm_password = document.getElementById("confirm_password");
 
+		function validatePassword(){
+		  if(password.value != confirm_password.value) {
+				$('#confirm_password').addClass('label-danger')
+		    confirm_password.setCustomValidity("Passwords Don't Match");
+		  } else {
+		    confirm_password.setCustomValidity('');
+				$('#confirm_password').removeClass('label-danger')
+		  }
+		}
+
+		password.onchange = validatePassword;
+		confirm_password.onkeyup = validatePassword;
 					$("#register-form-modal-submit").unbind().on("click",function(event){
-
+						if(password.value != confirm_password.value){
+						// 	swal({
+						//   title: 'Passwords Does Not Match',
+						//   text: "Check Passwords Again",
+						//   type: 'warning'
+						// })
+					} else{
 							event.preventDefault()
 							$.ajax({
 									url: '/api/users',
@@ -263,7 +288,7 @@
 									data: {
 											name: $("#register-form-modal-fullname").val(),
 											email: $("#register-form-modal-email").val(),
-											password: $("#register-form-modal-password").val()
+											password: $("#password").val()
 									},
 									success: function(result) {
 										location.reload();
@@ -284,6 +309,7 @@
 	// 									`
 									}
 					})
+				}
 				})
 
 
