change pp to small modal

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -388,8 +388,8 @@
 
 		</section>
 		<!-- #content end -->
-		<div id="modalprofilemessage" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-			<div class="modal-dialog modal-lg">
+		<div id="modalprofilemessage" class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+			<div class="modal-dialog modal-sm">
 				<div class="modal-body">
 					<div class="modal-content">
 						<div class="modal-header" id="modal-header-message">
