--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,9 +34,16 @@
 	<title>Superman Application| Recycle Company</title>
 
 
-<style>
-
-</style>
+<!--Start of Zendesk Chat Script-->
+<script type="text/javascript">
+window.$zopim||(function(d,s){var z=$zopim=function(c){
+z._.push(c)},$=z.s=
+d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
+_.push(o)};z._=[];z.set._=[];$.async=!0;$.setAttribute('charset','utf-8');
+$.src='https://v2.zopim.com/?4PPbcLOYIPjnFuhkiWmiFE6R0Luv6Ayv';z.t=+new Date;$.
+type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
+</script>
+<!--End of Zendesk Chat Script-->
 </head>
 
 <body class="stretched">
