reform transaction sturcture

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1234,7 +1234,7 @@ function resultPost (result){
 										<td>IDR ${nominalDel}</td>
 										<td>${status}</td>
 									</tr>`
-									$(`#${result.data[k].userId}bodylistgudang`).append(listrequestHTML)
+									$(`#${result.transactions[i].userId._id}bodylistgudang`).append(listrequestHTML)
 								}
 							}
 
