--- a/views/cms-dashboard.transaction.ejs
+++ b/views/cms-dashboard.transaction.ejs
@@ -282,7 +282,7 @@
 										<td >${verf}</td>
 										<td>${getMonth+'-'+getDate+'-'+getYear}</td>
 										<td><span style="font-size:12px">PIC : ${result.transactions[l].userId.name}</span></td>
-										<td><button mark=${result.data[k].transactions[l]._id} class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Rp. ${priceDel}</button></td>
+										<td><button mark=${result.transactions[l]._id} class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Rp. ${priceDel}</button></td>
 										<td>${trtype}</td>
 										<td>${result.transactions[l].recipient}</td>
 										<td>${result.transactions[l].bank}<br>${result.transactions[l].account}</td>
