--- a/views/cms-dashboard.transaction.ejs
+++ b/views/cms-dashboard.transaction.ejs
@@ -274,13 +274,16 @@
 					var getMonth = date.getMonth()+1
 					var getDate = date.getDate()
 					var getYear = date.getYear()+1900
+					var getHours = date.getHours()
+					var getMinutes = date.getMinutes()
+					var getSeconds = date.getSeconds()
 					var price = String(result.transactions[l].nominal)
 					var priceDel = price.replace(/(\d)(?=(\d\d\d)+(?!\d))/g, "$1,")
 						var listdataHTML =
 						`
 									<tr data-trigger='hover' id=${result.transactions[l]._id} data-placement="top">
 										<td >${verf}</td>
-										<td>${getMonth+'-'+getDate+'-'+getYear}</td>
+										<td>${getMonth+'-'+getDate+'-'+getYear}<br>${getHours+'-'+getMinutes+'-'+getSeconds}</td>
 										<td><span style="font-size:12px">PIC : ${result.transactions[l].userId.name}</span></td>
 										<td><button mark=${result.transactions[l]._id} class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Rp. ${priceDel}</button></td>
 										<td>${trtype}</td>
