fix button action date filter at transactions cms

--- a/views/cms-dashboard.transaction.ejs
+++ b/views/cms-dashboard.transaction.ejs
@@ -259,10 +259,10 @@
 			listTransaction()
 		})
 		$('#filter').unbind().on('click',function (e) {
-			
+
 			if ($('#datepicker').val() !== "") {
 				$.post({
-						url: "/api/transactions/",
+						url: "/api/transactions/filter",
 						data: {date: $('#datepicker').val()},
 						success: function(result) {
 							if(result.transactions.length > 0)	{
